# openwrt-packages

./: README.md
apu1-leds_buttom/: Makefile
apu1-leds_buttom/src/: Kconfig  Makefile  leds-apu1.c
atc-apn-database/: LICENSE  Makefile
atc-apn-database/files/: apn_converter.py
atc-fib-fg621_ea/: Makefile
atc-fib-fm350_gl/: Makefile
atc-fib-l850_gl/: Makefile
atc-fib-l8x0_gl/: Makefile
atc-hua-e3372h_320/: Makefile
atc-hua-me909s_120/: Makefile
atc-mik-r11e_lte/: Makefile
atc-mik-r11e_lte6/: Makefile
atc-mik_r11e_lte6/: Makefile
atc-rssi_d/: Makefile
atc-sms/: Makefile
atc-zte-mf286r/: Makefile
leds-apu1/src/: Kconfig  Makefile  leds-apu1.c
loopiaapi/: Makefile
luci/: luci.mk
luci/protocols/luci-proto-atc/: Makefile
luci/protocols/luci-proto-mbim/: Makefile
me909s/: Makefile
r8168/: Makefile
r8168-8.048.03/src/: r8168.h  r8168_n.c
r8168/src/: r8168_n.c
umbim/: Makefile
umbim/src/: CMakeLists.txt  cli.c  mbim-cid.h  mbim-dev.c  mbim-dev.h  mbim-enum.c  mbim-enum.h  mbim-enums.h  mbim-msg.c  mbim-msg.h  mbim-type.h  mbim.h
umbim/src/data/: gen-header.pl  mbim-service-auth.h  mbim-service-basic-connect.h  mbim-service-dss.h  mbim-service-ms-firmware-id.h  mbim-service-ms-host-shutdown.h  mbim-service-phonebook.h  mbim-service-proxy-control.h  mbim-service-sms.h  mbim-service-stk.h  mbim-service-ussd.h
uqmi/: Makefile
uqmi/src/: CMakeLists.txt  commands-dms.c  commands-nas.c  commands-wds.c  commands-wds.h
usbmode/: Makefile
usbmode/src/: CMakeLists.txt  convert-modeswitch.pl  switch.c  switch.h
(+28 files in other folders)
